@@ -29,13 +29,14 @@ import org.apache.tika.metadata.TikaCoreProperties;
 import org.apache.tika.parser.ParseContext;
 import org.apache.tika.parser.Parser;
 import org.junit.Before;
+import org.junit.Ignore;
 import org.junit.Test;
 import org.xml.sax.helpers.DefaultHandler;
 
 /**
  * Junit test class for Tika {@link Parser}s.
  */
-public class TestParsers extends TikaTest {
+public class TestParsers extends MultiThreadedTikaTest {
 
     private TikaConfig tc;
 
@@ -76,16 +77,16 @@ public class TestParsers extends TikaTest {
     @Test
     public void testOptionalHyphen() throws Exception {
         String[] extensions =
-                new String[] { "ppt", "pptx", "doc", "docx", "rtf", "pdf"};
+                new String[]{"ppt", "pptx", "doc", "docx", "rtf", "pdf"};
         for (String extension : extensions) {
             File file = getResourceAsFile("/test-documents/testOptionalHyphen." + extension);
             String content = tika.parseToString(file);
             assertTrue("optional hyphen was not handled for '" + extension + "' file type: " + content,
-                       content.contains("optionalhyphen") ||
-                       content.contains("optional\u00adhyphen") ||   // soft hyphen
-                       content.contains("optional\u200bhyphen") ||   // zero width space
-                       content.contains("optional\u2027"));          // hyphenation point
-            
+                    content.contains("optionalhyphen") ||
+                            content.contains("optional\u00adhyphen") ||   // soft hyphen
+                            content.contains("optional\u200bhyphen") ||   // zero width space
+                            content.contains("optional\u2027"));          // hyphenation point
+
         }
     }
 
@@ -93,17 +94,25 @@ public class TestParsers extends TikaTest {
         File file = getResourceAsFile("/test-documents/" + fileName + "." + extension);
         String content = tika.parseToString(file);
         assertTrue(extension + ": content=" + content + " did not extract text",
-                   content.contains("Here is some text"));
+                content.contains("Here is some text"));
         assertTrue(extension + ": content=" + content + " did not extract comment",
-                   content.contains("Here is a comment"));
+                content.contains("Here is a comment"));
     }
 
     @Test
     public void testComment() throws Exception {
-        final String[] extensions = new String[] {"ppt", "pptx", "doc", 
-            "docx", "xls", "xlsx", "pdf", "rtf"};
-        for(String extension : extensions) {
+        final String[] extensions = new String[]{"ppt", "pptx", "doc",
+                "docx", "xls", "xlsx", "pdf", "rtf"};
+        for (String extension : extensions) {
             verifyComment(extension, "testComment");
         }
+    }
+
+    //TODO: add a @smoketest tag or something similar to run this occasionally automatically
+    @Test
+    @Ignore("ignore for regular builds; run occasionally")
+    public void testAllMultiThreaded() throws Exception {
+        //this runs against all files in /test-documents
+        testMultiThreaded(10, 100, null);
     }
 }
